Added semantic html, main content, import fonts and CSS for body

--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Kamil Projects</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Hello, my name's Kamil. I'm a Front-End Web Developer.</h1>
+        <p>Below you find some of my previous work</p>
+        <button>Get In Touch</button>
+    </header>
+    <main>
+        <section>
+            <div>
+                <h2>My Projects</h2>
+                <p>My Latest Projects</p>
+            </div>
+            <div class="projects-list">
+                <article>
+                    <h3>Project 1</h3>
+                    <p>working on project 1</p>
+                    <img src="" alt="">
+                    <a href="">Visit</a>
+                </article>
+                <article>
+                    <h3>Project 2</h3>
+                    <p>working on project 2</p>
+                    <img src="" alt="">
+                    <a href="">Visit</a>
+                </article>
+                <article>
+                    <h3>Project 3</h3>
+                    <p>working on project 3</p>
+                    <img src="" alt="">
+                    <a href="">Visit</a>
+                </article>
+                <article>
+                    <h3>Project 4</h3>
+                    <p>working on project 4</p>
+                    <img src="" alt="">
+                    <a href="">Visit</a>
+                </article>
+            </div>
+
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
