Added animated bacground and styling to text.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Kamil Projects</title>
 </head>
 <body>
+    <nav>
+        <p id="logo">Kamil Nader</p>
+        <ul class="navigation-items">
+          <li class="navigation-item"><a href="#about-me">About Me</a></li>
+          <li class="navigation-item"><a href="#projects">Projects</a></li>
+          <li class="navigation-item"><a href="#skills">Skills</a></li>
+          <li class="navigation-item"><a href="/contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <header>
         <h1>Hello, my name's Kamil. I'm a Front-End Web Developer.</h1>
         <p>Below you find some of my previous work</p>
@@ -19,7 +28,7 @@
                 <h2>My Projects</h2>
                 <p>My Latest Projects</p>
             </div>
-            <div class="projects-list">
+            <div class="projects-grid">
                 <article>
                     <h3>Project 1</h3>
                     <p>working on project 1</p>
@@ -45,9 +54,17 @@
                     <a href="">Visit</a>
                 </article>
             </div>
-
+        </section>
+        <section>
+            <div>
+                <h3>Let's Work Together.</h3>
+                <button>Get In Touch</button>
+            </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Designed by Kamil Nader</p>
+        <a href="https://www.linkedin.com/in/kamilnader/">LinkedIn</a>
+    </footer>
 </body>
 </html>
