Added image and styling to article tag

--- a/index.html
+++ b/index.html
@@ -24,40 +24,40 @@
     </header>
     <main>
         <section>
-            <div>
+            <div class="projects-heading">
                 <h2>My Projects</h2>
                 <p>My Latest Projects</p>
             </div>
             <div class="projects-grid">
-                <article>
-                    <h3>Project 1</h3>
-                    <p>working on project 1</p>
-                    <img src="" alt="">
-                    <a href="">Visit</a>
-                </article>
-                <article>
-                    <h3>Project 2</h3>
-                    <p>working on project 2</p>
-                    <img src="" alt="">
-                    <a href="">Visit</a>
-                </article>
-                <article>
-                    <h3>Project 3</h3>
-                    <p>working on project 3</p>
-                    <img src="" alt="">
-                    <a href="">Visit</a>
-                </article>
-                <article>
-                    <h3>Project 4</h3>
-                    <p>working on project 4</p>
-                    <img src="" alt="">
-                    <a href="">Visit</a>
-                </article>
+                <a href="https://www.ui-snippets.com"><article>
+                    <img src="image/ui-snippets-image.png" alt="ui-snippets-image">
+                    <div class="project-box">Visit</div>
+                    <h3>UI-snippets</h3>
+                    <p>Free UI snippets library</p>
+                </article></a>
+                <a href="https://www.ui-snippets.com"><article>
+                    <img src="image/ui-snippets-image.png" alt="ui-snippets-image">
+                    <div class="project-box">Visit</div>
+                    <h3>UI-snippets</h3>
+                    <p>Free UI snippets library</p>
+                </article></a>
+                <a href="https://www.ui-snippets.com"><article>
+                    <img src="image/ui-snippets-image.png" alt="ui-snippets-image">
+                    <div class="project-box">Visit</div>
+                    <h3>UI-snippets</h3>
+                    <p>Free UI snippets library</p>
+                </article></a>
+                <a href="https://www.ui-snippets.com"><article>
+                    <img src="image/ui-snippets-image.png" alt="ui-snippets-image">
+                    <div class="project-box">Visit</div>
+                    <h3>UI-snippets</h3>
+                    <p>Free UI snippets library</p>
+                </article></a>                
             </div>
         </section>
         <section>
-            <div>
-                <h3>Let's Work Together.</h3>
+            <div class="together-section">
+                <h2>Let's Work Together.</h2>
                 <button>Get In Touch</button>
             </div>
         </section>
