--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
     <nav>
         <p id="logo">Kamil Nader</p>
         <ul class="navigation-items">
-          <li class="navigation-item"><a href="#about-me">About Me</a></li>
           <li class="navigation-item"><a href="#projects">Projects</a></li>
-          <li class="navigation-item"><a href="#skills">Skills</a></li>
           <li class="navigation-item"><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
     <header>
         <h1>Hello, my name's Kamil. I'm a Front-End Web Developer.</h1>
         <p>Below you find some of my previous work</p>
-        <button>Get In Touch</button>
+        <button class="btn-79"><span>Get In Touch</span></button>
     </header>
     <main>
         <section>
@@ -58,7 +56,7 @@
         <section>
             <div class="together-section">
                 <h2>Let's Work Together.</h2>
-                <button>Get In Touch</button>
+                <button class="btn-79"><span>Get In Touch</span></button>
             </div>
         </section>
     </main>
