Added all my previous experiences with images, added blobity cursor and color change JS animation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.blobity.dev/by.js?noAutoStart"></script>
+    <script src="script.js" async></script>
     <title>Kamil Projects</title>
 </head>
 <body>
@@ -33,23 +35,23 @@
                     <h3>UI-snippets</h3>
                     <p>Free UI snippets library</p>
                 </article></a>
-                <a href="https://www.ui-snippets.com"><article>
-                    <img src="image/ui-snippets-image.png" alt="ui-snippets-image">
+                <a href="https://www.tilores.io"><article>
+                    <img src="image/tilores-project.png" alt="tilores-image">
                     <div class="project-box">Visit</div>
-                    <h3>UI-snippets</h3>
-                    <p>Free UI snippets library</p>
+                    <h3>Tilores</h3>
+                    <p>Website Developer</p>
                 </article></a>
-                <a href="https://www.ui-snippets.com"><article>
-                    <img src="image/ui-snippets-image.png" alt="ui-snippets-image">
+                <a href="https://www.petkos.eu"><article>
+                    <img src="image/petkos-image.png" alt="petkos-image">
                     <div class="project-box">Visit</div>
-                    <h3>UI-snippets</h3>
-                    <p>Free UI snippets library</p>
+                    <h3>Petkos</h3>
+                    <p>Website Developer</p>
                 </article></a>
-                <a href="https://www.ui-snippets.com"><article>
-                    <img src="image/ui-snippets-image.png" alt="ui-snippets-image">
+                <a href="https://www.leverall.com"><article>
+                    <img src="image/leverall-image.png" alt="leverall-image">
                     <div class="project-box">Visit</div>
-                    <h3>UI-snippets</h3>
-                    <p>Free UI snippets library</p>
+                    <h3>Leverall</h3>
+                    <p>Website Developer</p>
                 </article></a>                
             </div>
         </section>
