Changed heading text

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </ul>
     </nav>
     <header>
-        <h1>Hello, my name's Kamil. I'm a Front-End Web Developer.</h1>
-        <p>Below you find some of my previous work</p>
+        <h1>Hi, I'm Kamil. I design and build things for the web.</h1>
+        <p>Front-End Developer based in Slovenia.</p>
         <a href="#contact"><button class="btn-79"><span>Get In Touch</span></button></a>
     </header>
     <main>
